--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 <body>
 	<nav>
 		<a href="Index.html" target="_blank">HOME</a>
-		<a href="">ABOUT</a>
+		<a href="">About</a>
 		<a href="">PROJECTS</a>
 		<a href="">HOBBIES</a>
 	</nav>
