we learnt about coding

--- a/Index.html
+++ b/Index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>OUR PORTFOLIO.</title>
+	<title>ELVIS`&SHADRACK`S PORTFOLIO.</title>                                       
+	<link rel="icon" href="Elvis&shadrack.jpg">
 	<link rel="stylesheet" href="style.css">
 	<style>
-		body{background-color: dodgerblue ;}
+		body{background-color: luminous blue;}
 	</style>	
 </head>
 <body>
+	<!--nav bar-->
 	<nav>
 		<a href="Index.html" target="_blank">HOME</a>
-		<a href="">About</a>
-		<a href="">PROJECTS</a>
+		<a href="https://www.google.com">ABOUT</a>
+		<a href="project.html">PROJECTS</a>
 		<a href="">HOBBIES</a>
 	</nav>
 	<h1 style=" text-align:center;"><b><u> OUR PORTFOLIO.</u></b> </h1>
@@ -31,7 +33,6 @@
 	<h2><u>Our subjects</u></h2>
 	<ul>
 		<li>Mathematics</li>
-		<li>English</li>
 		<li>Kiswahili</li>
 		<li>Biology</li>
 		<li>Physics</li>
@@ -56,7 +57,7 @@
 		<li>Basketball</li>
 
 	</ol>
-	<h2><u>A description of the games</u></h2>
+	<h2><u>A DESCRIPTION OF THE GAMES</u></h2>
 	<dl>
 	<dt><u>Football.</u></dt>
 	<dd>This is the most popular form of football worldwide and is simply known as soccer in some countries, especially in the United States and Canada, to differentiate it from other types of football.</dd>
@@ -87,6 +88,7 @@
 			<th>Grade</th>
 		</tr>
 		<tr>
+
 			<td>Shadrack</td>
 			<td>Mathematics</td>
 			<td>B</td>
@@ -95,8 +97,8 @@
 			<td>Elvis</td>
 			<td>Mathematics</td>
 			<td>B+</td>
-		</tr>	
+		</tr>
+
 	</table>
-	
 </body>
 </html
